Initial ObserverLib update
Signed-off-by: HellFirePvP <7419378+HellFirePvP@users.noreply.github.com>